--- a/employee-service.properties
+++ b/employee-service.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+
+spring.boot.message=WELCOME TO THE EMPLOYEE PROJECT 
