--- a/department-service.properties
+++ b/department-service.properties
@@ -8,4 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 
-spring.boot.message=WELCOME TO THE DEPARTMENT PROJECT
+spring.boot.message=WELCOME TO THE DEPARTMENT PROJECT 1
